--- a/src/app/prestations/containers/list-prestations/list-prestations.component.html
+++ b/src/app/prestations/containers/list-prestations/list-prestations.component.html
@@ -1,13 +1,6 @@
-<div class="table-responsive" >
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col" *ngFor="let item of entetes" >{{ item }}</th>
-    </tr>
-  </thead>
-  <tbody>
+
+<app-tableau [entetes]="entetes">
     <app-item-prestation *ngFor="let obj of collection" [item]="obj" (doChange)="change($event)"></app-item-prestation>
 
-  </tbody>
-</table>
-</div>
+</app-tableau>
+
